[gd_scene load_steps=15 format=3 uid="uid://bsydugi0cv631"]

[ext_resource type="Script" uid="uid://dpua21bbs8x1v" path="res://scene/blackjack.gd" id="1_f2mig"]
[ext_resource type="PackedScene" uid="uid://bsps7tsl6fhb5" path="res://blackjack_background/scene/blackjack_background_2.tscn" id="2_f2mig"]
[ext_resource type="PackedScene" uid="uid://bxsnmv7mw4pmw" path="res://scene/blackjack_background_2.tscn" id="2_yqphp"]
[ext_resource type="PackedScene" uid="uid://ckophae3oal2x" path="res://scene/card.tscn" id="4_gbj04"]
[ext_resource type="TileSet" uid="uid://clsaov0f3inaj" path="res://assets/tilemap/tileset.tres" id="5_1sjef"]
[ext_resource type="FontFile" uid="uid://dphd0was5qchn" path="res://asset/press_start_2p (1)/PressStart2P.ttf" id="6_hfiib"]
[ext_resource type="FontFile" uid="uid://dbee7gu4vinb7" path="res://asset/press_start_2p (1)/Minecraft.ttf" id="7_jr8fg"]
[ext_resource type="Texture2D" uid="uid://b7cuhf3618f7v" path="res://Photo MC.png" id="8_f2mig"]
[ext_resource type="Texture2D" uid="uid://csfxflhnkr87r" path="res://Photo Jungara.png" id="9_yqphp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2mig"]
bg_color = Color(0.6, 0.6, 0.6, 0.541176)

[sub_resource type="Animation" id="Animation_ql8fe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nc1eg"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ooq0f"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhygt"]
_data = {
&"RESET": SubResource("Animation_ql8fe"),
&"fade_in": SubResource("Animation_nc1eg"),
&"fade_out": SubResource("Animation_ooq0f")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f2mig")

[node name="blackjack_background_3" parent="." instance=ExtResource("2_f2mig")]
position = Vector2(-961, -543)
scale = Vector2(1.5, 1.5)

[node name="blackjack_background_2" parent="." instance=ExtResource("2_yqphp")]
visible = false
position = Vector2(-961, -543)
scale = Vector2(1.5, 1.5)

[node name="DeckAnchor" parent="." instance=ExtResource("4_gbj04")]
position = Vector2(827, -405)
scale = Vector2(2.12, 2.12)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(8, -3)
tile_set = ExtResource("5_1sjef")
format = 2

[node name="Camera2D" type="Camera2D" parent="."]
rotation = -3.14159
scale = Vector2(289590, 385618)
zoom = Vector2(0.67, 0.67)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
offset_right = 2029.0
offset_bottom = 1188.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Visible_Buttons" type="Node2D" parent="."]
position = Vector2(0, -255)

[node name="Hit_Button" type="Button" parent="Visible_Buttons"]
offset_left = 660.0
offset_top = 227.0
offset_right = 730.0
offset_bottom = 262.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("6_hfiib")
text = "HIT"

[node name="Stand_Button" type="Button" parent="Visible_Buttons"]
offset_left = 616.0
offset_top = 107.0
offset_right = 715.0
offset_bottom = 142.0
scale = Vector2(3, 3)
theme_override_fonts/font = ExtResource("6_hfiib")
text = "STAND"

[node name="Visible_Label" type="Node2D" parent="."]

[node name="Turn_Label" type="Label" parent="Visible_Label"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -97.0
offset_right = 500.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.682353)
theme_override_fonts/font = ExtResource("7_jr8fg")
theme_override_font_sizes/font_size = 100
text = "TURN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Player" type="Label" parent="Visible_Label"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 70.0
offset_right = 125.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_hfiib")
theme_override_font_sizes/font_size = 50
text = "?/21"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Dealer" type="Label" parent="Visible_Label"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -200.0
offset_right = 124.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_hfiib")
theme_override_font_sizes/font_size = 50
text = "?/21"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Life_Player" type="Label" parent="Visible_Label"]
offset_left = 605.0
offset_top = 39.0
offset_right = 942.5
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("6_hfiib")
theme_override_font_sizes/font_size = 110
horizontal_alignment = 1
vertical_alignment = 1

[node name="Life_Dealer" type="Label" parent="Visible_Label"]
offset_left = -936.0
offset_top = -151.0
offset_right = -598.5
theme_override_font_sizes/font_size = 110
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wp2436045-violet-evergarden-wallpapers" type="Sprite2D" parent="."]
position = Vector2(755, 343)
scale = Vector2(0.391732, 0.391732)
texture = ExtResource("8_f2mig")
region_enabled = true
region_rect = Rect2(8, 128, 1040, 1016)

[node name="Waguri" type="Sprite2D" parent="."]
position = Vector2(-759, -339)
scale = Vector2(0.299998, 0.299998)
texture = ExtResource("9_yqphp")

[node name="Dialog_Player" type="Node2D" parent="."]

[node name="Dialog_Dealer" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Dialog_Dealer"]
offset_left = -562.0
offset_top = -512.0
offset_right = 630.0
offset_bottom = -459.0
theme_override_fonts/font = ExtResource("7_jr8fg")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_f2mig")
text = "awdawd"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hhygt")
}
autoplay = "fade_out"

[connection signal="pressed" from="Visible_Buttons/Hit_Button" to="." method="_on_hit_button_pressed"]
[connection signal="pressed" from="Visible_Buttons/Stand_Button" to="." method="_on_stand_button_pressed"]
